# schet_go

./: Cargo.toml  README.md
src/: llm.rs  main.rs  tg_bot.rs
